fixed alignment issue

--- a/src/components/Gist.css
+++ b/src/components/Gist.css
@@ -29,6 +29,7 @@
 }
 .fork-container {
   display: flex;
+  align-items: center;
 }
 .description {
   margin: 5px 0;
